k8s/config-template/ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomerium-console
  annotations:
    cert-manager.io/cluster-issuer: your-cluster-issuer
    external-dns.alpha.kubernetes.io/hostname: "console.domain.com"
    # console requires user identity headers
    ingress.pomerium.io/pass_identity_headers: "true"
    # console has internal access control. alternatively, use PPL
    ingress.pomerium.io/allow_any_authenticated_user: "true"
    # since v0.21.0, console is using TLS by default
    ingress.pomerium.io/secure_upstream: "true"
spec:
  ingressClassName: pomerium
  tls:
    - secretName: console-domain-com
      hosts:
        - console.domain.com
  rules:
    - host: "console.domain.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium-console
                port:
                  name: app
